# opencl

./: import-summary.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sony/openclexample1/: OpenCLActivity.java
app/src/main/jni/: hassproc.h  kernel.cpp  kernel.h  openCLNR.cpp
gradle/wrapper/: gradle-wrapper.properties
